--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -16,7 +16,26 @@
     />
 </head>
 <body>
-    <main></main>
+  <header class="header__container">
+
+    <nav>
+      <img src="/assets/img/logo.svg" alt="Logo Webwomen">
+      <div class="text__container">
+          <h3>A woman's place is wherever she wants it to be!</h3>
+          <div class="nav__paragraphs">
+            <p>Are you looking for internship opportunities, employment or scholarships?</p>
+            <p>Or even opportunities to attend technology events in Brazil and around the world?</p>
+          </div>
+          <p>Check out what we have for you below!</p>
+        </div>
+      <button>Go to job's section</button>
+    </nav>
+  </header>
+    <main>
+      <section>
+        <h4>Jobs</h4>
+      </section>
+    </main>
     <script src="jobsData.js"></script>
     <script src="index.js"></script>
 </body>
