--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -28,12 +28,17 @@
           </div>
           <p>Check out what we have for you below!</p>
         </div>
-      <button>Go to job's section</button>
+      <button> Go to job's section </button>
+
     </nav>
   </header>
     <main>
-      <section>
+      <section class="jobs" id="#jobs">
         <h4>Jobs</h4>
+
+        <ul class="jobsList">
+          
+        </ul>
       </section>
     </main>
     <script src="jobsData.js"></script>
