Estiliei o aside do selected Jobs

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -40,6 +40,15 @@
           
         </ul>
       </section>
+
+      <aside class="selectedJobs__container">
+        <h4>Selected jobs</h4>
+
+        <ul class="selectedJobsList">
+          <p>You haven't applied for a job yet.</p>
+
+        </ul>
+      </aside>
     </main>
     <script src="jobsData.js"></script>
     <script src="index.js"></script>
