--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,6 +45,7 @@
         <h4>Selected jobs</h4>
 
         <ul class="selectedJobsList">
+          
           <p>You haven't applied for a job yet.</p>
 
         </ul>
