Fiz os media queries

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -16,7 +16,7 @@
     />
 </head>
 <body>
-  <header class="header__container">
+  <header class="header__container ">
 
     <nav>
       <img src="/assets/img/logo.svg" alt="Logo Webwomen">
@@ -32,7 +32,7 @@
 
     </nav>
   </header>
-    <main>
+    <main class>
       <section class="jobs" id="#jobs">
         <h4>Jobs</h4>
 
