adicionei funcionalidade ao botao go to jobs section

--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -28,12 +28,12 @@
           </div>
           <p>Check out what we have for you below!</p>
         </div>
-      <button> Go to job's section </button>
+      <a href="#jobs"><button>Go to job's section</button></a>
 
     </nav>
   </header>
     <main class>
-      <section class="jobs" id="#jobs">
+      <section class="jobs" id="jobs">
         <h4>Jobs</h4>
 
         <ul class="jobsList">
